// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services browserNotification newMessage() should create a browser notification 1`] = `
Array [
  Object {
    "body": "body",
    "icon": "/static/private/img/icons/logo.png",
    "onClick": [Function],
    "timeout": 5000,
    "title": "title",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (empty) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/img/icons/logo.png",
    "onClick": [Function],
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (invalid values) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/img/icons/logo.png",
    "onClick": [Function],
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (null values) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/img/icons/logo.png",
    "onClick": [Function],
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;
